--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^4.5.0",
     "core-js": "^3.6.5",
     "formik": "^2.1.4",
+    "google-maps-react": "^2.0.6",
     "moment": "^2.27.0",
     "multer": "^1.4.2",
     "node-sass": "^4.14.1",
